# seqsplitter

./: Cargo.toml  README.md
src/: main.rs  process.rs
tests/: lib.rs
tests/expected/: report.json
tests/resources/: list.txt  one.txt  sample.fasta
