[package]
name = "seqsplitter"
version = "0.1.0"
authors = ["Steven Weaver <steven@stevenweaver.org>"]
edition = "2018"
license = "MIT"
description = "Calculates per-read and total sequence complexity from FastQ file."
repository = "https://github.com/stevenweaver/seqsplitter"
homepage = "https://stevenweaver.org"
keywords = ["fastq"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "3.0.12"
serde_json = "1.0.62"
tera = "1.6.1"
chrono = "0.4.19"
reqwest = "0.9.0"
rustc-hash = "1.1.0"
itertools = "0.10.0"
regex = "1"
bio = "0.41.0"

[[bin]]
name = "seqsplitter"
path = "src/main.rs"

[profile.release]
lto = "fat"
codegen-units = 1
debug = 1
